--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,6 +3,7 @@ $horizontal_padding: 20vw;
 $vertical_padding: 100px;
 $text-color1: white;
 $text-color2: black;
+$bg-color: #202731;
 
 *{
     margin: 0;
