--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,3 +50,17 @@ section{
     transform: translate(-2.5%, 40.5%);
     z-index: -1;
   }
+ .bubble::after{
+   content: '';
+   height: 85%;
+   width: 100%;
+   bottom: 0;
+   position: absolute;
+   border-top-right-radius: 50% 100%;
+   border-top-left-radius: 50% 100%;
+   background-color:map-get($map: $colors, $key: one);
+   z-index: -1;
+ }
+ .green_bubble{
+  background-color:map-get($map: $colors, $key: one);
+ }
