--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,3 +64,63 @@ section{
  .green_bubble{
   background-color:map-get($map: $colors, $key: one);
  }
+ .red_box{
+  background-color: red;
+  .wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+    &{
+      svg {
+        position: relative;
+        display: block;
+        width: calc(108% + 1.3px);
+        height: 166px;
+    }
+    .shape-fill{
+      fill: #202731;
+    }
+    }
+}
+
+ }
+ .pink_container{
+  background-color: #E34E67;
+ }
+ .spacer{
+   height: 300px;
+   width: 100%;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+   z-index: 2;
+ }
+ .layer{
+   background-image: url('../svg/layered-waves-haikei.svg');
+   z-index: 2;
+ }
+ .top_wave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+  &{
+    svg{
+      position: relative;
+      display: block;
+      width: calc(107% + 1.3px);
+      height: 112px;
+    }
+    .shape-fill{
+      fill: $bg-color;
+    }
+  }
+}
+
